--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,13 +127,13 @@ androidExtensions {
 
 ext {
     // App dependency versions
-    appCompatVersion = '1.0.2'
-    supportVersion = '1.0.0'
-    playServicesVersion = '16.1.0'
-    daggerVersion = '2.20'
+    appCompatVersion = '1.1.0'
+    playServicesVersion = '17.2.1'
     retrofitVersion = '2.4.0'
     okHttpVersion = '3.11.0'
-    leakcanaryVersion = '1.5.4'
+    leakcanaryVersion = '1.6.3'
+    lifecycleVersion = '2.2.0'
+    koinVersion = '2.1.5'
 
     // Test dependency versions
     mockitoVersion = '2.25.0'
@@ -148,32 +148,29 @@ dependencies {
     // Need this because of Kotlin
 
     // Android/Google libraries
-    implementation 'androidx.core:core-ktx:1.0.1'
+    implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation "androidx.appcompat:appcompat:$appCompatVersion"
-    implementation "androidx.recyclerview:recyclerview:$supportVersion"
-    implementation "androidx.cardview:cardview:$supportVersion"
-    implementation "androidx.annotation:annotation:$supportVersion"
-    implementation "com.google.android.material:material:$supportVersion"
+    implementation "androidx.appcompat:appcompat:1.1.0"
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation "androidx.annotation:annotation:1.1.0"
+    implementation "com.google.android.material:material:1.1.0"
 
 
     implementation "com.google.android.gms:play-services-base:$playServicesVersion"
 
-    implementation 'androidx.lifecycle:lifecycle-runtime:2.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-    kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycleVersion"
 
-    // App architecture - Dagger 2
-    implementation "com.google.dagger:dagger:$daggerVersion"
-    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
-
-    // App architecture - RxJava
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    // Koin - Service Locator
+    implementation "org.koin:koin-android:$koinVersion"
+    implementation "org.koin:koin-androidx-scope:$koinVersion"
+    implementation "org.koin:koin-androidx-viewmodel:$koinVersion"
 
     // JSON
-    implementation 'com.squareup.moshi:moshi:1.6.0'
-    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.6.0'
+    implementation 'com.squareup.moshi:moshi:1.9.2'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.9.2'
 
     // Networking - HTTP
     implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
@@ -181,14 +178,13 @@ dependencies {
 
     // Networking - REST
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
 
     // Monitoring - Timber (logging)
-    implementation 'com.jakewharton.timber:timber:4.7.0'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
     // Monitoring - Crashlytics
-    implementation('com.crashlytics.sdk.android:crashlytics:2.9.4@aar') {
+    implementation('com.crashlytics.sdk.android:crashlytics:2.10.1@aar') {
         transitive = true
     }
 
@@ -197,14 +193,13 @@ dependencies {
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakcanaryVersion"
 
     // Unit test
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     testImplementation "androidx.test:rules:$androidTestSupportVersion"
     testImplementation "androidx.test:core:$androidTestSupportVersion"
     testImplementation "androidx.test.ext:junit:$androidTestSupportVersion"
-    testImplementation 'org.robolectric:robolectric:4.2'
-    testImplementation "org.mockito:mockito-core:$mockitoVersion"
-    testImplementation "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
+    testImplementation 'org.robolectric:robolectric:4.3.1'
     testImplementation "com.squareup.okhttp3:mockwebserver:$okHttpVersion"
+    testImplementation "io.mockk:mockk:1.9.3"
 
 
     // Android JUnit Runner, JUnit Rules, and Espresso
@@ -214,10 +209,9 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidTestSupportVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoVersion"
+    androidTestImplementation "io.mockk:mockk-android:1.9.3"
 
-    androidTestImplementation "org.mockito:mockito-android:$mockitoVersion"
-    androidTestImplementation "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
-    androidTestImplementation 'com.github.fabioCollini:DaggerMock:0.8.4'
+
 }
 
 //TODO Replace FindBugs with SpotBugs
