--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,14 @@
 buildscript {
-    ext.android_plugin_version = '3.4.0'
-    ext.kotlin_version = '1.3.31'
+    ext.android_plugin_version = '3.6.0-rc01'
+    ext.kotlin_version = '1.3.72'
     ext.jacoco_version = '0.8.1'
 
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
 
     dependencies {
@@ -13,6 +16,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
         classpath "org.jacoco:org.jacoco.core:$jacoco_version"
+        classpath "org.jlleitschuh.gradle:ktlint-gradle:7.1.0"
     }
 }
 
@@ -26,6 +30,7 @@ allprojects {
 
     // Automatically pull down javadocs and sources (if available)
     apply plugin: 'idea'
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
     idea {
         module {
             downloadJavadoc = true
@@ -92,12 +97,10 @@ task initialCleanup() {
 task staticAnalysis {
     def appProject = subprojects.find { project -> 'app' == project.name }
 
-    def findBugsTasks = getProjectTask(appProject, 'findbugs')
     def pmdTasks = getProjectTask(appProject, 'pmd')
     def lintTasks = getProjectTask(appProject, 'lint')
     def checkstyleTasks = getProjectTask(appProject, 'checkstyle')
 
-    dependsOn findBugsTasks
     dependsOn pmdTasks
     dependsOn lintTasks
     dependsOn checkstyleTasks
