--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     dependencies {
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
 
-        classpath 'io.fabric.tools:gradle:1.26.1'
+        classpath 'io.fabric.tools:gradle:1.31.2'
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
     }
 }
@@ -19,7 +19,7 @@ repositories {
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
+
 apply plugin: 'kotlin-allopen'
 apply plugin: 'kotlin-android-extensions'
 
@@ -30,6 +30,7 @@ apply plugin: 'findbugs'
 apply plugin: 'pmd'
 apply plugin: 'checkstyle'
 apply plugin: 'jacoco'
+apply plugin: 'kotlin-kapt'
 
 apply plugin: 'com.github.ben-manes.versions'
 
@@ -148,7 +149,7 @@ ext {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    kapt "androidx.databinding:databinding-compiler:$rootProject.ext.android_plugin_version"
+    annotationProcessor "androidx.databinding:databinding-compiler:$rootProject.ext.android_plugin_version"
     // Need this because of Kotlin
 
     // Android/Google libraries
@@ -174,7 +175,7 @@ dependencies {
 
     // JSON
     implementation 'com.squareup.moshi:moshi:1.9.2'
-    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.9.2'
+    annotationProcessor 'com.squareup.moshi:moshi-kotlin-codegen:1.9.2'
 
     // Networking - HTTP
     implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
@@ -186,6 +187,8 @@ dependencies {
 
     // Monitoring - Timber (logging)
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
+
 
     // Monitoring - Crashlytics
     implementation('com.crashlytics.sdk.android:crashlytics:2.10.1@aar') {
@@ -204,6 +207,9 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.3.1'
     testImplementation "com.squareup.okhttp3:mockwebserver:$okHttpVersion"
     testImplementation "io.mockk:mockk:1.9.3"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.0-M1'
+    testImplementation "org.koin:koin-test:$koinVersion"
+
 
 
     // Android JUnit Runner, JUnit Rules, and Espresso
@@ -214,6 +220,7 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoVersion"
     androidTestImplementation "io.mockk:mockk-android:1.9.3"
+
 
 
 }
