--- a/app/build.gradle
+++ b/app/build.gradle
@@ -174,11 +174,12 @@ dependencies {
 
     // JSON
     implementation 'com.squareup.moshi:moshi:1.9.2'
-    annotationProcessor 'com.squareup.moshi:moshi-kotlin-codegen:1.9.2'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.9.2'
 
     // Networking - HTTP
     implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
     implementation "com.squareup.okhttp3:okhttp-urlconnection:$okHttpVersion"
+    implementation("com.squareup.okhttp3:logging-interceptor:$okHttpVersion")
 
     // Networking - REST
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
@@ -205,7 +206,7 @@ dependencies {
     testImplementation "androidx.test.ext:junit:$androidTestSupportVersion"
     testImplementation 'org.robolectric:robolectric:4.3.1'
     testImplementation "com.squareup.okhttp3:mockwebserver:$okHttpVersion"
-    testImplementation "io.mockk:mockk:1.9.3"
+    testImplementation "io.mockk:mockk:1.10.0"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.0-M1'
     testImplementation "org.koin:koin-test:$koinVersion"
 
@@ -218,7 +219,7 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidTestSupportVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoVersion"
-    androidTestImplementation "io.mockk:mockk-android:1.9.3"
+    androidTestImplementation "io.mockk:mockk-android:1.10.0"
 
 
 
